<resources>
    <string name="app_name">Revamp GoPets</string>
    <string name="title_home">Home</string>
    <string name="title_all_chats">Messages</string>
    <string name="title_account">Account</string>
    <string name="filter">Filter</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="city_and_area">City and Area</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="apply">Apply</string>
    <string name="all_services">All Services</string>
    <string name="service_type">Service Type</string>
    <string name="brand">Brand</string>
    <string name="ads">ads</string>
    <string name="shops">shops</string>
    <string name="special_trainer">trainer</string>
    <string name="vets_grooming_delivery">cars</string>
    <string name="clinic_veterinary">vets</string>
    <string name="sallAndBuy">Sell Buy</string>
    <string name="adoptedAnimals">Adopted</string>
    <string name="matedAnimals">Mated </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="no_data_available">No Data Available</string>
    <string name="egp">EGP</string>
    <string name="advertiser">Advertiser</string>
    <string name="view_profile">View Profile</string>
    <string name="description">Description</string>
    <string name="ad">Ad</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="more">More</string>
    <string name="content_description_search">content description search</string>
    <string name="content_description_favorite">content  description  favorite</string>
    <string name="content_description_more">content  description  more</string>
    <string name="page_title">Chat app</string>
    <string name="view_contact">View Contact</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="disappearingMessages">disappearing Messages</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="video_call">Video call</string>
    <string name="phone_call">Phone call</string>
    <string name="newGroup">New Group</string>
    <string name="newBroadcast">New Broadcast</string>
    <string name="linkedDevices">Linked devices</string>
    <string name="starredMessages">Starred messages</string>
    <string name="Settings">Settings</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>
    <string name="camera">CAMERA</string>
    <string name="open_microphone_to_record">open Microphone to record</string>
    <string name="sort">Sort</string>
    <string name="sortByName">Sort by name</string>
    <string name="sortByDate">Sort by date</string>
    <string name="inviteAFriend">Invite A Friend</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>
</resources>