<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/inviteAFriend"
        android:title="@string/inviteAFriend"
        app:showAsAction="never" />

    <item
        android:id="@+id/contents"
        android:title="@string/contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>