<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_chats">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.allam.revampgopets.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_adsFragment"
            app:destination="@id/adsFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_all_chats"
        android:name="com.allam.revampgopets.ui.allChats.mainScreens.AllChatsFragment"
        android:label="@string/title_all_chats"
        tools:layout="@layout/fragment_all_chats">
        <action
            android:id="@+id/action_navigation_all_chats_to_chatRoomFragment"
            app:destination="@id/chatRoomFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.allam.revampgopets.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/filterFragment"
        android:name="com.allam.revampgopets.ui.filter.FilterFragment"
        android:label="FilterFragment" />
    <fragment
        android:id="@+id/adsFragment"
        android:name="com.allam.revampgopets.ui.ads.AdsFragment"
        android:label="AdsFragment">

        <action
            android:id="@+id/action_adsFragment_to_filterFragment"
            app:destination="@id/filterFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_adsFragment_to_adDetailsFragment"
            app:destination="@id/adDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/adDetailsFragment"
        android:name="com.allam.revampgopets.ui.ads.AdDetailsFragment"
        android:label="AdDetailsFragment">
        <action
            android:id="@+id/action_adDetailsFragment_to_imagesSliderFragment"
            app:destination="@id/imagesSliderFragment" />
        <action
            android:id="@+id/action_adDetailsFragment_to_adOwnerProfileFragment"
            app:destination="@id/adOwnerProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/imagesSliderFragment"
        android:name="com.allam.revampgopets.ui.ads.ImagesSliderFragment"
        android:label="ImagesSliderFragment" />
    <fragment
        android:id="@+id/adOwnerProfileFragment"
        android:name="com.allam.revampgopets.ui.ads.AdOwnerProfileFragment"
        android:label="AdOwnerProfileFragment">
        <action
            android:id="@+id/action_adOwnerProfileFragment_to_adDetailsFragment"
            app:destination="@id/adDetailsFragment"
            app:popUpTo="@id/adDetailsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/chatRoomFragment"
        android:name="com.allam.revampgopets.ui.allChats.ChatRoomFragment"
        android:label="ChatRoomFragment">
        <action
            android:id="@+id/action_chatRoomFragment_to_documentsFragment"
            app:destination="@id/documentsFragment" />
        <action
            android:id="@+id/action_chatRoomFragment_to_cameraFragment"
            app:destination="@id/cameraFragment" />
        <action
            android:id="@+id/action_chatRoomFragment_to_galleryFragment"
            app:destination="@id/galleryFragment" />
        <action
            android:id="@+id/action_chatRoomFragment_to_audioFragment"
            app:destination="@id/audioFragment" />
        <action
            android:id="@+id/action_chatRoomFragment_to_locationFragment"
            app:destination="@id/locationFragment" />
        <action
            android:id="@+id/action_chatRoomFragment_to_contactFragment"
            app:destination="@id/contactFragment" />
    </fragment>
    <fragment
        android:id="@+id/documentsFragment"
        android:name="com.allam.revampgopets.ui.allChats.attachmentSheetScreens.DocumentsFragment"
        android:label="DocumentsFragment" />
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.allam.revampgopets.ui.allChats.attachmentSheetScreens.CameraFragment"
        android:label="CameraFragment" />
    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.allam.revampgopets.ui.allChats.attachmentSheetScreens.GalleryFragment"
        android:label="GalleryFragment" />
    <fragment
        android:id="@+id/audioFragment"
        android:name="com.allam.revampgopets.ui.allChats.attachmentSheetScreens.AudioFragment"
        android:label="AudioFragment" />
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.allam.revampgopets.ui.allChats.attachmentSheetScreens.LocationFragment"
        android:label="LocationFragment" />
    <fragment
        android:id="@+id/contactFragment"
        android:name="com.allam.revampgopets.ui.allChats.attachmentSheetScreens.ContactFragment"
        android:label="ContactFragment" />

</navigation>