<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            android:background="#fff"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/app_name"
                app:toolbarId="@+id/toolbar">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="true" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:titleTextColor="@color/black">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/backArrow"
                            android:layout_width="?actionBarSize"
                            android:layout_height="?actionBarSize"
                            android:padding="10dp"
                            android:src="@drawable/ic_circle_arrow"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/share"
                            android:layout_width="?actionBarSize"
                            android:layout_height="?actionBarSize"
                            android:padding="10dp"
                            android:src="@drawable/ic_share"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/plant_detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/progressLoading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:paddingTop="4dp"
                    android:lineSpacingExtra="8sp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black12"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3sp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:lineSpacingExtra="2sp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/grey4"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/price"
                    app:layout_constraintTop_toBottomOf="@+id/price" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:lineSpacingExtra="2sp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/grey4"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/time"
                    app:layout_constraintTop_toTopOf="@id/time" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clientDetailsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location">

                    <TextView
                        android:id="@+id/wordAdvertiser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/advertiser"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImage"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="1dp"
                        android:background="@drawable/circle1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/wordAdvertiser" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:lineSpacingExtra="3sp"
                        android:text="@string/advertiser"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black12"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@+id/profileImage"
                        app:layout_constraintTop_toTopOf="@+id/profileImage" />

                    <TextView
                        android:id="@+id/viewProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="2dp"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/view_profile"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/profileImage"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <ImageView
                        android:id="@+id/message"
                        android:layout_width="54dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="65dp"
                        android:layout_marginLeft="65dp"
                        android:src="@drawable/ic_message2"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/viewProfile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/name" />

                    <ImageView
                        android:id="@+id/call"
                        android:layout_width="54dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/ic_call"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/message"
                        app:layout_constraintEnd_toStartOf="@id/message"
                        app:layout_constraintTop_toTopOf="@+id/name"
                        app:layout_constraintVertical_bias="1.0" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:background="#dfe2e5"
                        app:layout_constraintTop_toBottomOf="@id/viewProfile" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/wordDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/description"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black12"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clientDetailsLayout" />

                <TextView
                    android:id="@+id/descriptionContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="6sp"
                    android:textAlignment="viewStart"
                    android:textColor="#4d4d4d"
                    android:textSize="14sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wordDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
